[package]
name = "lnd-rs"
version = "0.1.0"
authors = ["lsunsi <lsunsi@pm.me>", "Luiz Parreira <luizfilipester@gmail.com.br>"]
edition = "2021"
license = "MIT"

[lib]
name = "lnd"

[dependencies]
hex = { version = "0.4.0", features = ["std"], default-features = false }
opentelemetry = { version = "0.29.1", features = ["trace"], default-features = false }
prost = { version = "0.13.0", features = ["prost-derive"], default-features = false }
thiserror = { version = "2.0.2", default-features = false }
tonic = { version = "0.13.0", features = ["codegen", "prost", "tls", "transport"], default-features = false }

[build-dependencies]
tonic-build = "0.13.0"
