[package]
name = "lnd-rs"
version = "0.1.0"
authors = ["lsunsi <lsunsi@pm.me>", "Luiz Parreira <luizfilipester@gmail.com.br>"]
edition = "2024"
license = "MIT"

[lib]
name = "lnd"

[dependencies]
hex = { version = "0.4.0", features = ["std"], default-features = false }
opentelemetry = { version = "0.30.0", features = ["trace"], default-features = false }
prost = { version = "0.13.0", features = ["prost-derive"], default-features = false }
thiserror = { version = "2.0.0", default-features = false }
tonic = { version = "0.13.0", features = ["codegen", "prost", "tls-webpki-roots", "transport"], default-features = false }

[build-dependencies]
tonic-build = "0.13.0"
