[package]
name = "lnd-rs"
version = "0.1.0"
authors = ["lsunsi <lsunsi@pm.me>", "Luiz Parreira <luizfilipester@gmail.com.br>"]
edition = "2024"
license = "MIT"

[lib]
name = "lnd"

[dependencies]
hex = { version = "0.4.0", features = ["std"], default-features = false }
opentelemetry = { version = "0.30.0", features = ["trace"], default-features = false }
prost = { version = "0.14.0", features = ["derive"], default-features = false }
thiserror = { version = "2.0.0", default-features = false }
tonic = { version = "0.14.0", features = ["codegen", "tls-webpki-roots", "transport"], default-features = false }
tonic-prost = { version = "0.14.0",  default-features = false }

[build-dependencies]
tonic-prost-build = "0.14.0"
